Removed dependency on sun.misc.BASE64Encoder/Decoder